# hotel_booking_cancellation_prediction

./: .gitignore  Dockerfile  LICENCE  README.md  index.html  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: deploy.yml
data/: hotel_analysis_results.json
js/: i18n.js  main.js
locales/: en.json  fr.json
notebooks/: hotel_booking_analysis.ipynb
src/: config.py  data_processor.py  data_transformer.py  dataset_downloader.py  spark_file_manager.py
src/data/: data_processor.py  data_transformer.py  dataset_downloader.py  spark_file_manager.py
src/utils/: __init__.py  logger.py
src/web/css/: styles.css
src/web/js/: charts.js
